[package]
name = "mentat"
version = "0.1.0"
authors = ["John Lago <750845+Lagoja@users.noreply.github.com>"]

[dependencies]
rust-crypto = "^0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = {version = "0.6.2", features = ["v4"]}
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rocket_contrib = "0.3.8"

