#![feature(const_unsafe_cell_new)]

[package]
name = "mentat"
version = "0.1.0"
authors = ["John Lago <750845+Lagoja@users.noreply.github.com>"]

[dependencies]
rust-crypto = "^0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = {version = "0.6.2", features = ["v4"]}
rocket = "0.3.9"
rocket_codegen = "0.3.9"
rocket_contrib = "0.3.9"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"


